--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,14 +7,9 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_Dispositivos"
-            android:icon="@drawable/devices"
-            android:title="Dispositivos"/>
-
-        <item
             android:id="@+id/nav_Red_Social"
             android:icon="@drawable/red_social"
-            android:title="Red Social"/>
+            android:title="Comunidad"/>
 
         <item
             android:id="@+id/nav_Mensajes"
@@ -24,19 +19,12 @@
         <item
             android:id="@+id/nav_Lanazamientos"
             android:icon="@drawable/new_releases"
-            android:title="Nuevos Lanzamientos"/>
-
-
-        <item
-            android:id="@+id/nav_Agregar"
-            android:icon="@drawable/clip"
-            android:title="Agregar"/>
+            android:title="Lanzamientos"/>
 
         <item
             android:id="@+id/nav_Security"
             android:icon="@drawable/system_security"
             android:title="Seguridad"/>
-
 
     </group>
 
