--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,16 +34,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:backgroundTint="@color/green"
+                    android:backgroundTint="@android:color/transparent"
                     app:fabCradleMargin="10dp"
                     app:fabCradleRoundedCornerRadius="50dp">
 
                     <com.google.android.material.bottomnavigation.BottomNavigationView
                         android:id="@+id/bottom_navigation"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        app:labelVisibilityMode="labeled"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_margin="18dp"
+                        app:itemIconSize="30dp"
+                        android:background="@drawable/bottom_bkg"
+                        app:labelVisibilityMode="unlabeled"
                         app:menu="@menu/bottom_menu" />
 
                 </com.google.android.material.bottomappbar.BottomAppBar>
