--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -26,6 +26,20 @@
             android:icon="@drawable/system_security"
             android:title="Seguridad"/>
 
+
     </group>
+
+
+
+
+    <item android:title="">
+        <menu>
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/logout"
+                android:title="Logout"/>
+        </menu>
+    </item>
+
 
 </menu>
