--- a/app/src/main/res/drawable/menu.xml
+++ b/app/src/main/res/drawable/menu.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#000000"
+<vector android:height="24dp" android:tint="#FFFFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M11,11V3H5C3.9,3 3,3.9 3,5v6H11z"/>
