--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,53 +9,41 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/toolbar"
-            android:background="@color/green"
-            android:elevation="4dp"
+            android:background="@color/light_green"
+            app:title="Adgamus"
+            app:titleMarginStart="102dp"
+            app:titleTextColor="@color/white"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/Theme.AppCompat.Light"/>
+            android:popupTheme="@style/Theme.AppCompat.Light" />
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="600dp"
+            android:layout_height="55dp"
+            android:id="@+id/bottom_navigation"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/bottom_bkg"
+            android:elevation="1dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:menu="@menu/bottom_menu"
+            app:itemIconSize="32dp"
+            app:itemIconTint="@drawable/item_selector"
+            app:itemRippleColor="@android:color/transparent"
+            app:labelVisibilityMode="unlabeled"/>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragment_container">
-
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.bottomappbar.BottomAppBar
-                    android:id="@+id/bottomAppBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:backgroundTint="@android:color/transparent"
-                    app:fabCradleMargin="10dp"
-                    app:fabCradleRoundedCornerRadius="50dp">
-
-                    <com.google.android.material.bottomnavigation.BottomNavigationView
-                        android:id="@+id/bottom_navigation"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_margin="18dp"
-                        app:itemIconSize="30dp"
-                        android:background="@drawable/bottom_bkg"
-                        app:labelVisibilityMode="unlabeled"
-                        app:menu="@menu/bottom_menu" />
-
-                </com.google.android.material.bottomappbar.BottomAppBar>
-
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-        </FrameLayout>
+            android:id="@+id/fragment_container"/>
 
     </RelativeLayout>
 
@@ -64,7 +52,7 @@
         android:layout_height="match_parent"
         android:id="@+id/navigation_drawer"
         android:layout_gravity="start"
-        app:itemIconTint="@color/green"
+        app:itemIconTint="@color/light_green"
         app:itemTextColor="@color/green"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_menu"/>
