--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="150dp"
     android:gravity="top"
     android:padding="16dp"
-    android:background="@color/green"
+    android:background="@color/light_green"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
