--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4FA853</color>
+    <color name="light_green">#3BB85F</color>
+    <color name="grey">#D2D2D2</color>
 </resources>
