--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4FA853</color>
     <color name="light_green">#3BB85F</color>
-    <color name="grey">#D2D2D2</color>
+    <color name="grey">#6F6F6F</color>
 </resources>
