--- a/app/src/main/res/layout/fragment_plantas.xml
+++ b/app/src/main/res/layout/fragment_plantas.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PerfilFragment">
+    tools:context=".PlantasFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Perfil"
+        android:text="Plantas"
         android:gravity="center"
         android:textColor="@color/green"
         android:textSize="36dp"/> />
