--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     android:gravity="top"
-    android:padding="16dp"
-    android:background="@color/light_green"
+    android:padding="10dp"
+    android:background="@drawable/fondo_drawer"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
     <ImageView
-        android:layout_width="101dp"
+        android:layout_width="84dp"
         android:layout_height="83dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/user" />
 
@@ -19,9 +20,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Usuario"
-        android:layout_marginStart="21dp"
-        android:textSize="18sp"
+        android:layout_marginStart="20dp"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="El usuario ingresara la descripcion que el desee y se mostrara en esta area."
+        android:layout_marginStart="20dp"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:layout_marginBottom="8dp"/>
+
+    <ImageView
+        android:id="@+id/icon_edit"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="355dp"
+        android:src="@drawable/editar" />
 
 </LinearLayout>
