--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="230dp"
     android:gravity="top"
     android:padding="10dp"
     android:background="@drawable/fondo_drawer"
@@ -34,11 +35,5 @@
         android:textColor="@color/white"
         android:layout_marginBottom="8dp"/>
 
-    <ImageView
-        android:id="@+id/icon_edit"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="355dp"
-        android:src="@drawable/editar" />
 
 </LinearLayout>
