--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,6 +7,11 @@
         android:checkableBehavior="single">
 
         <item
+            android:id="@+id/nav_Perfil"
+            android:icon="@drawable/perfil"
+            android:title="Perfil"/>
+
+        <item
             android:id="@+id/nav_Red_Social"
             android:icon="@drawable/red_social"
             android:title="Comunidad"/>
@@ -25,7 +30,6 @@
             android:id="@+id/nav_Ajustes"
             android:icon="@drawable/configuracion"
             android:title="Ajustes"/>
-
 
     </group>
 
