--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_brown"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
 
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/toolbar"
-            android:background="@color/light_green"
-            app:title="Adgamus"
-            app:titleMarginStart="102dp"
-            app:titleTextColor="@color/white"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/Theme.AppCompat.Light" />
+    <ImageView
+        android:id="@+id/Imagen_Vaca"
+        android:layout_width="391dp"
+        android:layout_height="399dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="-420dp"
+        android:layout_marginBottom="332dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Imagen_Blanca"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7"
+        app:srcCompat="@drawable/inicio"
+        tools:ignore="MissingConstraints" />
 
+    <ImageView
+        android:id="@+id/Imagen_Blanca"
+        android:layout_width="426dp"
+        android:layout_height="461dp"
+        android:layout_marginBottom="-60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/bottom_white"
+        tools:ignore="MissingConstraints" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="600dp"
-            android:layout_height="55dp"
-            android:id="@+id/bottom_navigation"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/bottom_bkg"
-            android:elevation="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            app:menu="@menu/bottom_menu"
-            app:itemIconSize="32dp"
-            app:itemIconTint="@drawable/item_selector"
-            app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
-            app:labelVisibilityMode="unlabeled"/>
+    <TextView
+        android:id="@+id/Bienvenidos..."
+        android:layout_width="373dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="68dp"
+        android:text="Bienvenid@ a Adgamus"
+        android:textColor="@color/green"
+        android:textSize="35dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Imagen_Vaca"
+        tools:ignore="MissingConstraints" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragment_container"/>
+    <TextView
+        android:id="@+id/Inicio_estancia"
+        android:layout_width="345dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:text="Iniciemos con tu estancia aqui.\nDa clic en el boton para comenzar tu nueva aventura."
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Bienvenidos..."
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
 
-    </RelativeLayout>
+    <Button
+        android:id="@+id/Comenzar"
+        android:layout_width="188dp"
+        android:layout_height="65dp"
+        android:background="@drawable/bkg_b_comenzar"
+        android:gravity="center"
+        android:text="Comenzar"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/navigation_drawer"
-        android:layout_gravity="start"
-        app:itemIconTint="@color/light_green"
-        app:itemTextColor="@color/green"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"/>
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="92dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.887"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/adgamus_2"
+        tools:ignore="MissingConstraints" />
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
