--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -14,15 +14,15 @@
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
+            android:background="@color/light_green"
             android:layout_height="50dp"
             android:id="@+id/toolbar"
-            android:background="@color/light_green"
             app:title="Adgamus"
+            android:elevation="1dp"
             app:titleMarginStart="102dp"
             app:titleTextColor="@color/white"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/Theme.AppCompat.Light" />
-
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="600dp"
@@ -50,11 +50,12 @@
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:id="@+id/navigation_drawer"
         android:layout_gravity="start"
         app:itemIconTint="@color/light_green"
         app:itemTextColor="@color/green"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu"/>
+        app:menu="@menu/nav_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
