--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="grey">#6F6F6F</color>
     <color name="light_brown">#E3D7BF</color>
     <color name="brown">#5F4633</color>
+    <color name="red">#CC0000</color>
 </resources>
