--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_brown">#E3D7BF</color>
     <color name="brown">#5F4633</color>
     <color name="red">#CC0000</color>
+    <color name="turquey">#64B5F6</color>
 </resources>
