--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -9,7 +9,7 @@
     android:padding="10dp"
     android:background="@drawable/fondo_drawer"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    tools:context=".Menu_Principal">
+    tools:context=".Datos_Drawer">
 
 
     <ImageView
