--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4FA853</color>
@@ -8,9 +7,6 @@
     <color name="grey">#6F6F6F</color>
     <color name="light_brown">#E3D7BF</color>
     <color name="brown">#5F4633</color>
-<<<<<<< HEAD
     <color name="red">#CC0000</color>
-=======
-
->>>>>>> origin/Look_and_feel
+    <color name="turquey">#64B5F6</color>
 </resources>
