--- a/app/src/main/res/drawable/bkg_opc__ajustes.xml
+++ b/app/src/main/res/drawable/bkg_opc__ajustes.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#9C6E60"/>
+    <solid android:color="@color/light_brown"/>
     <corners android:radius="30dp"/>
 
 </shape>
