--- a/app/src/main/res/drawable/spinner_style.xml
+++ b/app/src/main/res/drawable/spinner_style.xml
@@ -13,7 +13,7 @@
     <!-- Línea de borde para resaltar el spinner -->
     <item android:right="1dp" android:left="1dp" android:top="1dp" android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#8B4513" /> <!-- Color café oscuro -->
+            <solid android:color="@color/brown" /> <!-- Color café oscuro -->
             <corners android:radius="8dp" />
         </shape>
     </item>
