--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="light_green">#3BB85F</color>
     <color name="grey">#6F6F6F</color>
     <color name="light_brown">#E3D7BF</color>
-    <color name="brown">#5F4633</color>
+    <color name="brown">#B68E56</color>
     <color name="red">#CC0000</color>
     <color name="turquey">#64B5F6</color>
 </resources>
