--- a/app/src/main/res/layout/fragment_ajustes.xml
+++ b/app/src/main/res/layout/fragment_ajustes.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nombre_Usuario"
-                android:textStyle="bold"
+                style="@style/Estilo_Primario"
                 />
 
             <TextView
@@ -38,19 +38,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Correo Usuario"
-                android:textStyle="italic"
+                style="@style/Estilo_Correo"
                 />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:paddingStart="25dp"
-                android:paddingEnd="25dp"
-                android:background="@drawable/btns_ajustes"
-                android:textAllCaps="false"
-                android:text="Editar"
-                android:textColor="#F1EBDF" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -250,18 +241,6 @@
 
             </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/Aceptar_Cambios"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="Guardar"
-                android:textStyle="bold"
-                android:textColor="#F1EBDF"
-                android:background="@drawable/btns_ajustes"
-                android:textAllCaps="false"
-                android:enabled="false"
-                />
 
 
         </LinearLayout>
