--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".HomeFragment">
+
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -13,6 +15,6 @@
         android:text="Home"
         android:gravity="center"
         android:textColor="@color/green"
-        android:textSize="36dp"/>
+        android:textSize="36dp"/> />
 
 </FrameLayout>
