--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -3,33 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_brown"
+    android:background="@color/white"
     tools:context=".AjustesFragment">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageButton
-            android:id="@+id/Botton_Regresar"
-            android:layout_width="82dp"
-            android:layout_height="64dp"
-            android:padding="15dp"
-            android:src="@drawable/baseline_arrow_circle_left_24"
-            android:background="?android:attr/selectableItemBackground"
-            android:onClick="onBackButtonClick" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Perfil"
-            android:layout_centerInParent="true"
-            android:textColor="#FF000000"
-            android:textStyle="bold"
-            android:textSize="18sp" />
-
-    </RelativeLayout>
-
 
     <ScrollView
         android:layout_width="match_parent"
@@ -39,61 +14,97 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="55dp"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iconoIzquierda"
+                android:layout_width="51dp"
+                android:layout_height="54dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@drawable/engranaje" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:text="Perfil"
+                android:textColor="#FF000000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
 
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="100dp"
-                android:src="@drawable/baseline_person_pin_24">
-            </ImageView>
+                android:src="@drawable/baseline_person_pin_24"></ImageView>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
                 android:layout_marginTop="12dp"
+                android:background="@drawable/btns_ajustes"
                 android:paddingStart="25dp"
                 android:paddingEnd="25dp"
-                android:background="@drawable/btns_ajustes"
-                android:textAllCaps="false"
                 android:text="Editar"
+                android:textAllCaps="false"
                 android:textColor="#F1EBDF" />
 
-            <TextView
+            <EditText
                 android:id="@+id/Nombre_Usus"
+                style="@style/Estilo_Primario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="Nombre_Usuario"
-                android:textStyle="bold"
-                />
+                android:inputType="none"
+                android:text="Nombre_Usuario" />
 
-            <TextView
+            <EditText
                 android:id="@+id/Correo_Usu"
+                style="@style/Estilo_Correo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Correo Usuario"
-                android:textStyle="italic"
-                />
+                android:inputType="none"
+                android:text="Correo Usuario" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
-                android:orientation="vertical"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/layout_style_2"
+                android:orientation="vertical"
                 android:padding="15dp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="342dp"
+                    android:layout_height="wrap_content">
 
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Biografia del usuario:"
+                        tools:ignore="MissingConstraints" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <EditText
+                        android:id="@+id/Biografía_Usu"
+                        android:layout_width="336dp"
+                        android:layout_height="92dp"
+                        android:inputType="none"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="30dp"
+
+                        />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             </LinearLayout>
@@ -102,13 +113,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:layout_marginTop="40dp"
-                android:orientation="vertical"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/layout_style_2"
+                android:orientation="vertical"
                 android:padding="15dp">
 
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="342dp"
+                    android:layout_height="wrap_content">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Preferencias del usuario:"
+                        tools:ignore="MissingConstraints" />
+
+                    <EditText
+                        android:id="@+id/Preferencias_Usu"
+                        android:layout_width="336dp"
+                        android:layout_height="92dp"
+                        android:inputType="none"
+                        tools:ignore="MissingConstraints"
+                        tools:layout_editor_absoluteX="0dp"
+                        tools:layout_editor_absoluteY="30dp" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -121,12 +154,12 @@
                 android:layout_marginTop="30dp"
 
                 android:background="@drawable/btns_ajustes"
-                android:enabled="false"
                 android:text="Aceptar cambios"
-
                 android:textAllCaps="false"
+
                 android:textColor="#F1EBDF"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="invisible" />
 
 
         </LinearLayout>
